--- a/style.css
+++ b/style.css
@@ -31,39 +31,21 @@ body {
   float: left;
 }
 
-.backgroundimg{
-    background-repeat: no-repeat;
-    height: 60vh;
-    width: 80%;
-    object-fit: cover;
-}
-
 .main-center{
-    text-align: center;
     margin: auto;
-    top: 10%;
-    position: relative;
-    background-color: white;
-    padding-top: 2rem;
-}
-
-.main-center, .text{
-    position: absolute;
-    z-index: 999;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    text-align: center;
+      background-color: white;
+      text-align: center;
+      display: flex;
+      background-image: url('images/FEET.png');
+      background-repeat: no-repeat;
+      background-size: 100%;
 }
 
 .text, .apply{
-    width: 70%;
+    width: 100%;
     background-color: #fff;
-    padding-left: 100px;
-    padding-right: 100px;
-    padding-top: 90px;
-    padding-bottom: 90px;
-    margin-top: 4rem;
+    margin: 50px;
+    padding: 50px;
 }
 
 .text h1{
@@ -72,10 +54,6 @@ body {
 
 .text p{
     padding: 1rem;
-}
-
-.text{
-    width: 50%;
 }
 
 .apply{
